assets/css/style.css
    @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Exo+2:wght@600&display=swap');

* {
    border: none;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

header{
    background-color: rgb(0, 0, 0);
    overflow: hidden;
}

body {
    font-family: "Exo 2" , sans-serif;
    font-weight: 400;
    background-color: #ffffff;
    color: rgb(0, 0, 0);
}

/* heading styles and logo */

h1, h2{
    font-family: "Bebas Neue" , sans-serif;
    letter-spacing: 2px;
    color: #f7f7f7;
}

#logo{
    float: left;
    font-size: 275%;
}

/* navigation */

#controls{
    font-size: 90%;
    letter-spacing: 4px;
    float: right;
    padding-right: 50px;
}

#controls, #logo {
    line-height: 75px;
}

#controls ul{
    margin-right: 30px;
    list-style-type: none;
}

#controls li {
    float: left;
    margin-right: 25px;
  }

#controls a{
    text-decoration: none;
    color: #ffffff;
}

#controls a:hover{
    border-bottom: 1px solid #ffffff;
}

.active{
    border-bottom: 1px solid #ffffff;
}

/* hero image */

#hero-outer {
    height: 900px;
    width: 100%;
    overflow: hidden;
    position: relative;
}

#hero-image {
    height: 900px;
    width: 100%;
    background: url("../images/hero-image-first.jpg") no-repeat center center;
    background-size: cover;

    animation-name: hero-zoom;
    animation-duration: 5s;
    animation-fill-mode: forwards;
}

/*creates the level of zoom for hero image */

@keyframes hero-zoom {
    from {
        transform: scale(1);
    }

    to {
        transform: scale(1.1);
    }
}

#cover-text {
    font-size: 160%;
    font-family: "Bebas neue", sans-serif;
    text-transform: uppercase;
    letter-spacing: 4px;

    width: 200px;
    height: 100px;

    padding-top: 20px;
    padding-left: 30px;
    padding-bottom: 40px;

    background-color: rgba(255, 255, 255, 0.7);

    top: 140px;

    position: absolute;
}

#welcome-text {
    color: #000000;
}

#hero-image-second {
    height: 800px;
    width: 100%;
    background: url(../images/hero-image-second.jpg) no-repeat center center;
    background-size: cover;
    font-size: 50px;
}

#explore-r6 {
font-family: "Bebas neue" , sans-serif;
color: rgba(0, 0, 0, 0.785);
position: relative;
top: 75px;
text-align: center;
margin: 0 auto;
}

/* about section for site and game */

#about {
    background-color: #3a3a3a;
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    padding: 40px 30px;
}

#about-r6 {
    flex: 1;
    min-width: 280px;
}

#about-website {
    flex: 1;
    min-width: 280px;
}

#explore {
    padding-top: 100px;
}
.btn {
    display: block;
    font-size: 30px;
    padding: 16px 20px;
    border-radius: 30px;
    background-color: rgb(186, 186, 186);
    color-scheme: grey;
    cursor: pointer;
    margin: 0 auto;
}

.btn a{
    text-decoration: none;
    color: rgb(0, 0, 0);
}

.btn:hover {
    background-color: rgb(90, 90, 90);
}

/* about content styling */


#about-heading-r6 {
    text-align: center;
}

#about-heading-website {
    text-align: center;
}

#about-r6-content {
    font-family: "Bebas neue", sans-serif ;
    color: #ffffff;
    text-align: center;
}

#about-website-content {
    font-family: "Bebas neue", sans-serif ;
    color: #ffffff;
    text-align: center;
}

#text-link {
    color: #ffffff;
    text-decoration: none;
}

#text-link:hover {
    color: rgb(90, 90, 90);
    text-decoration: underline;
}

/* footer */


footer {
    height: 90px;
}

.social-networks {
    text-align: center;
}

.social-networks>li {
    display: inline;
}

.social-networks i {
    font-size: 300%;
    margin: 1%;
    padding: 5%;
    color: #3a3a3a;
}

/* games hero image */

#games {
    background: url("../images/background-games.jpg");
    background-size: cover;
    background-attachment: fixed;
    margin: 0;
    padding: 0;
}

/* games.html */

/* beginning */

#beginning {
    width: 90%;
    height: auto;
    max-width: 800px;
    margin: 0 auto;
    position: relative;
    background-color: #3a3a3a;
    border-radius: 20px;
    margin-bottom: 30px;
    align-items: center;
    text-align: center;
}

#reactivation {
    text-align: center;
    font-family: "Exo 2", sans-serif;
}

#CTU {
    font-family: "Bebas neue", sans-serif;
    color: #f7f7f7;
}

/* timelines */

.timelines {
    width: 90%;
    height: auto;
    max-width: 800px;
    margin: 0 auto;
    position: relative;
    text-align: center;
}

.timelines ol {
    list-style: none;
    padding: 0;
}

.timelines ol li {
    padding: 20px;
    background-color: #3a3a3a;
    color: #f7f7f7;
    border-radius: 20px;
    margin-bottom: 30px;
}

.timelines ol li:last-child {
    margin-bottom: 20px;
}

.timelines-content ul{
    list-style: none;
}
.timelines-content p {
    font-family: "Bebas neue", sans-serif;
    font-size: 16px;
    line-height: 20px;
    font-weight: 200;
}

/* comic */

.comic {
    color: #f7f7f7;
    text-decoration: none;
}

.comic:hover {
    text-decoration: underline;
}

/* video */

.video {
    width: 90%;
}

/* newsletter */

#newsletter-main {
    background: url("../images/background-newsletter.jpg");
    background-size: cover;
    margin: 0 auto;
    padding: 0;
    width: 100%;
    height: 800px;
}

#newsletter-intro {
    background-color: #3a3a3a;
    background-size: cover;
    align-content: center;
    text-align: center;
    height: 125px;
    margin: 0 auto;
}

#newsletter-paragraph {
    color: #f7f7f7;
}

#sign-up-heading {
    background-color: #3a3a3a;
    border-radius: 9px;
}

.form-section {
    text-align: center;
    color: #ffffff;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-content: space-around;
    height: 35%;
    margin-top: 30px;
}

.form-item {
    font-family: inherit;
    width: 320px;
    background-color: #3a3a3a;
    align-content: center;
    letter-spacing: 2px;
    position: inherit;
    margin: 3px;
    padding: 5px;
    border-radius: 9px;
}


.join-button {
    font-family:"Exo 2", sans-serif;
    color: #f7f7f7;
    font-size: larger;
    background-color: #3a3a3a;
    margin-top: 15px;
    padding: 15px;
    border-radius: 9px;
}

.join-button:hover {
    color:#f7f7f779;
    opacity: 0,8;
}

/* registration */

#registration {
    background-color: #727272;
    color: #f7f7f7;
    width: 100%;
    height: 150px;
    text-align: center;
}

/* 404 error message style */

#error {
    background-color: #727272;
    height: 900px;
    text-align: center;
}
.page-not-found-heading {
    font-family: "exo 2", sans-serif;
    font-size: 60px;
}

.page-not-found {
    font-family: "bebas neue", sans-serif;
    font-size: 40px;
}

/* media quaries for smaller screen sizes */

@media screen and (min-width: 360px) {

    #cover-text {
        right: 100px;
    }
    #controls li {
        float: left;
        margin-right: 23px;
    }

    #newsletter-intro {
        height: 200px;
    }
}


@media screen and (min-width: 400px) {
    #cover-text {
        right: 150px;
    }
}

